apps/media/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: seerr
    app.kubernetes.io/name: seerr
  name: seerr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: seerr
      app.kubernetes.io/name: seerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: seerr
        app.kubernetes.io/name: seerr
    spec:
      containers:
        - name: seerr
          image: seerr
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5055
              name: http
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            failureThreshold: 3
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3

          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
            failureThreshold: 3
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3

          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
            failureThreshold: 10
            periodSeconds: 5
            initialDelaySeconds: 20
            timeoutSeconds: 3

          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 15m
              memory: 350Mi

          volumeMounts:
            - name: config
              mountPath: /app/config

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: smb-appconfig-overseerr-claim
