apps/media/seerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-httproute
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: default
  hostnames:
    - requests.x.pmcd.io
    - seerr.x.pmcd.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          kind: Service
          namespace: media
          port: 80
